# tpm.c

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  DESIGN.md  Makefile  README.md  test.sh
src/: libtpm.c  libtpm.h  test.c  tpm.c  tpm.h
